# socat2pcap

./: Makefile  README.rst  build.sh  pyproject.toml
socat2pcap/: __main__.py  common.py  main.py  pcap.py  socat.py
